Use modules in app

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,21 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
+    <script>
+      (() => {
+        const Z_THEME_COOKIE_KEY = 'z-theme';
+        const zThemeDarkCookieValue = 'dark';
+        const Z_THEME_DARK_CLASS_NAME = 'z-theme-dark';
+
+        const isDarkTheme = window.document.cookie.includes(
+          `${Z_THEME_COOKIE_KEY}=${zThemeDarkCookieValue}`,
+        );
+        if (isDarkTheme) {
+          window.document.body.classList.add(Z_THEME_DARK_CLASS_NAME);
+        }
+      })();
+    </script>
+
     <app-root></app-root>
   </body>
 </html>
