--- a/projects/ng-zealous-docs/src/index.html
+++ b/projects/ng-zealous-docs/src/index.html
@@ -2,12 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>NgZealousDocs</title>
+    <title>NgZealous Docs</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
+    <script>
+      (() => {
+        const Z_THEME_COOKIE_KEY = 'z-theme';
+        const zThemeDarkCookieValue = 'dark';
+        const Z_THEME_DARK_CLASS_NAME = 'z-theme-dark';
+
+        const isDarkTheme = window.document.cookie.includes(
+          `${Z_THEME_COOKIE_KEY}=${zThemeDarkCookieValue}`,
+        );
+        if (isDarkTheme) {
+          window.document.body.classList.add(Z_THEME_DARK_CLASS_NAME);
+        }
+      })();
+    </script>
+
     <app-root></app-root>
   </body>
 </html>
