Improve docs layout

--- a/projects/ng-zealous/alert/alert.html
+++ b/projects/ng-zealous/alert/alert.html
@@ -23,7 +23,7 @@
     class="z-alert__close z-sys-reset"
     type="button"
     matRipple
-    [attr.aria-label]="intl.Close"
+    [aria-label]="intl.Close"
     (click)="visible.set(false)"
   >
     <mat-icon>close</mat-icon>
